# Zero2ProdRust

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
