[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ankit Sharma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.115", features = ["derive"] }
serde-aux = "3"
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version  = "0.1.37" , features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6"
unicode-segmentation = "1.7.1"
validator = "0.15.0"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
base64 = "0.13.0"
argon2 = { version = "0.4.1", features = ["std"] }
urlencoding = "2.1.2"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
once_cell = "1.7.2"
serde_json = "1.0.61"
linkify = "0.9.0"
claim = "0.5"
fake = "~2.3"
